After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712563 - Fixes for cogl journal usage when picking
Fixes for cogl journal usage when picking
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-18 05:45 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2013-11-19 16:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
stage: Fix indentation in pick methods (2.03 KB, patch)
2013-11-18 05:45 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
stage: Remove the pick buffer caching (7.92 KB, patch)
2013-11-18 05:45 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2013-11-18 05:45:17 UTC
Together with the cogl fixes in bug #712562 , this patch set completely
eliminates any glReadPixels calls in gnome-shell.
Comment 1 Jasper St. Pierre (not reading bugmail) 2013-11-18 05:45:19 UTC
Created attachment 260077 [details] [review]
stage: Fix indentation in pick methods
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-11-18 05:45:22 UTC
Created attachment 260078 [details] [review]
stage: Remove the pick buffer caching

Since the journal is flushed on context switches, trying to use a cached
buffer means that we will use glReadPixels when picking, which isn't what
we want. Instead, always use a clipped draw, and remove the logic for
caching the pick buffer.
Comment 3 Jasper St. Pierre (not reading bugmail) 2013-11-19 16:21:28 UTC
Attachment 260077 [details] pushed as 9082ccc - stage: Fix indentation in pick methods
Attachment 260078 [details] pushed as a427c12 - stage: Remove the pick buffer caching