stage: Fix indentation in pick methods

https://bugzilla.gnome.org/show_bug.cgi?id=712563